[project]
name = "yaka"
version = "0.1.0"
description = "An application to test how to build on konflux"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.0",
]
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "pybuild-deps>=0.4.0",
]

[tool.uv.sources]
pybuild-deps = { git = "https://github.com/bruno-fs/pybuild-deps", rev = "rust-support" }
